--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@capacitor/local-notifications": "^7.0.1",
     "@capacitor/preferences": "^7.0.1",
     "@tanstack/react-query": "^5.83.0",
+    "@types/google.maps": "^3.58.1",
     "@types/react": "^19.1.8",
+    "@vis.gl/react-google-maps": "^1.5.4",
     "adhan": "^4.4.3",
     "hijri-date": "^0.2.2",
     "i18next": "^25.3.2",
@@ -26,6 +28,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
+    "use-places-autocomplete": "^4.0.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
