Add multi-language support, enhanced mosque data, and caching functionality
- Updated Arabic and English localization files to include new strings for cached results, refresh options, contact info, and special events.
- Enhanced MosqueService to support caching of mosque search results and added methods for searching mosques using Google Places and OpenStreetMap APIs.
- Introduced OfflineStorageService for caching mosque data with expiration and validation checks.
- Added a new RadiusSelector component for user-friendly radius selection in mosque searches.
- Created a comprehensive Mosque API Configuration Guide for setting up and using the mosque finder functionality.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.16.5",
     "jsdom": "^26.1.0",
+    "task-master-ai": "^0.21.0",
     "typescript": "~5.7.3",
     "vite": "^6.3.5",
     "vitest": "^3.2.4"
