feat: Update mosque search functionality and enhance environment configuration
- Added support for local environment files in .gitignore to prevent sensitive data exposure.
- Implemented signing configurations in build.gradle for secure app release management.
- Enhanced MosqueCard component to display contact information and special events more effectively.
- Improved MosqueFinderScreen with better handling of mosque search results and user interactions.
- Updated localization files to include new strings for contact info and mosque details.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist-ssr
 *.local
 .env
 
+# local env files
+.env.local
+.env.*.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -26,3 +30,10 @@ dist-ssr
 
 # Kiro settings with sensitive data
 .kiro/settings/mcp.json
+
+# production
+/dist
+
+# keystore
+/android/keystore.properties
+sahw-assistant-release-key.keystore
